tests/baselines/reference/inheritanceStaticFuncOverridingAccessor.errors.txt
==== tests/cases/compiler/inheritanceStaticFuncOverridingAccessor.ts (3 errors) ====
    class a {
        static get x() {
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return "20";
        }
        static set x(aValue: string) {
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    
        }
    }
    
    class b extends a {
          ~
!!! error TS2418: Class static side 'typeof b' incorrectly extends base class static side 'typeof a':
!!! error TS2418:   Types of property 'x' are incompatible:
!!! error TS2418:     Type '() => string' is not assignable to type 'string'.
        static x() {
            return "20";
        }
    }